<resources>
    <string name="app_name">SwapBook</string>
    <string name="my_shalve">My Shalve</string>
    <string name="search_board">Search</string>
    <string name="my_contacts">Contacts</string>
    <string name="my_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="shelve">Shelve</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    
    <string name="web_client_secret">x1gA2LvMCQOUyJQi3Z6ZUUHt</string>
    <string name="title">Название книги</string>
    <string name="author">Автор книги</string>
    <string name="add_book">Добавить книгу</string>
    <string name="add_image">"Выберите изображение: "</string>
    <string name="sign_out">Выйти</string>
</resources>
