<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.AddBookActivity">

    <RelativeLayout
        android:id="@+id/add_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>
        
        <TextView
            android:id="@+id/text"
            style="@style/TextSizeLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/add_book"
            android:gravity="left"/>
            

        <EditText
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/text"
            android:inputType="text"
            android:textSize="25sp"
            android:hint="@string/title"
            />

        <EditText
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/book_title"
            android:inputType="text"
            android:textSize="25sp"
            android:hint="@string/author"
            />

        <TextView
            android:id="@+id/text_image_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="5dp"
            android:layout_below="@id/book_author"
            android:text="@string/add_image"
            android:textSize="25sp" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:layout_below="@id/text_image_choose"
            android:background="@drawable/border"
            />

        <ImageButton
            android:id="@+id/add_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:layout_below="@id/text_image_choose"
            android:background="@drawable/ic_add_black_24dp"
            android:backgroundTint="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:weightSum="2">

            <Button
                android:id="@+id/upload"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:text="Забирай дядь"/>

            <Button
                android:id="@+id/close"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:text="Я передумал"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>